Luna SR2 format